# HDB-HeliosDB-Nano

./: .dockerignore  .gitignore  AGENTS.md  BLOCKER_idea_5.md  BLOCKER_mcp_legacy.md  BUGS_CODE_INDEX_FK_VIOLATION_v3_21_1.md  BUGS_DASHBOARD_MIGRATION_TRIAGE.md  BUGS_TIMETRACKER_DRIZZLE_COMPAT.md  CHANGELOG.md  Cargo.toml  Dockerfile.binary  FEATURE_REQUEST_adaptive_topk.md  FEATURE_REQUEST_ast_index_and_lsp.md  FEATURE_REQUEST_code_graph_overview.md  FEATURE_REQUEST_cross_process_on_conflict.md  FEATURE_REQUEST_cte_in_join_constant_predicate.md  FEATURE_REQUEST_fk_in_txn.md  FEATURE_REQUEST_graphrag_with_context.md  FEATURE_REQUEST_native_mcp_endpoint.md  FEATURE_REQUEST_pagination.md  FEATURE_REQUEST_pagination_markon.md  FEATURE_REQUEST_parallel_writes.md  FEATURE_REQUEST_pilot_helios_corpus.md  FEATURE_REQUEST_streaming_pipeline.md  FEATURE_REQUEST_temporal_branch_lsp.md  FEATURE_REQUEST_tool_result_caching.md  FEATURE_TEST_TRACKER.md  GIT_REPLICATION_STATUS.md  HANDOFF_BUG_8.md  LICENSE  PREDICATE_PUSHDOWN_REPORT.md  PRODUCTION_READINESS_REPORT.md  README.md  VALIDATION_REPORT_v3.24.0.md  VALIDATION_REPORT_v3.25.0.md  VALIDATION_REPORT_v3.26.0.md  clippy.toml  config.example.toml  deny.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
benches/: art_index_bench.rs  branch_performance.rs  conflict_detection_bench.rs  encryption_benchmark.rs  linker_precision.rs  multi_tenancy_bench.rs  mv_incremental_bench.rs  phase3_benchmarks.rs  predicate_pushdown_bench.rs  simd_benchmark.rs  sync_benchmark.rs  time_travel_optimization.rs  vector_search_bench.rs  with_context_bench.rs
benchmarks/: pg_vs_helios.py
crates/heliosdb-proxy/: Cargo.toml
crates/heliosdb-proxy/src/: admin.rs  config.rs  lib.rs  main.rs  protocol.rs  server.rs
deployment/: PHASE_3_DOCKER_COMPOSE.yml
deployment/docker/: Dockerfile  docker-compose.yml
deployment/flyio/: fly.toml
deployment/railway/: railway.toml
deployment/render/: render.yaml
deployment/vercel/: README.md  vercel.json
docs/: BENCHMARK_PG_VS_HELIOS.txt  PERFORMANCE_BASELINE.md  PERFORMANCE_IMPROVEMENTS.md  TRACING_GUIDE.md
docs/code_graph/: PILOT_RESULTS.md  overview.md  pilot.md  troubleshooting.md
docs/compatibility/: fts.md  information_schema.md  plpgsql.md  sqlite.md
docs/followups/: 181-list-languages-view.md  182-body-vec-column.md  183-extractor-registry.md  184-http-sse-progress.md  185-lsp-rename-apply.md  186-docling-ingest.md  187-code-embed.md  188-schema-namespacing.md  189-type-aware-resolution.md  190-hnsw-bias.md  191-acceptance-benchmarks.md  192-fr6-pilot.md  205-cloudv2-persistence-bug.md  PLAN.md  binary-size-baseline.json  build-report.md
docs/guides/: authentication.md  database_management.md  ha_cluster_tutorial.md  ha_hardening_proposal.md  ha_hardening_results.md  ha_testing.md  repl_demo.md  sqlite_drop_in_tutorial.md  upgrade.md
examples/: audit_demo.rs  branch_test.rs  code_graph_inspect.rs  code_graph_pilot.rs  complex_queries_demo.rs  concurrent_mv_refresh_demo.rs  embedded.rs  encryption.rs  encryption_demo.rs  example_fallback_usage.py  mv_scheduler_demo.rs  oltp_smoke.rs  pg_server.rs  postgres_server_extended.rs  postgres_server_ssl.rs  query_optimizer_demo.rs  quickstart.rs  repl_demo.md  simd_vector_operations.rs  sqlite_migration_example.py  trigger_execution_demo.rs  trigger_new_old_example.rs  trigger_registry_example.rs  vector_search_demo.rs
examples/python/: example_fallback_usage.py  (+1 more)
releases/: heliosdb-lite-v3.3.0-x86_64-unknown-linux-gnu.tar.gz.sha256
scripts/: 01_admin_setup_tenants.sql  02_tenant_acme_operations.sql  03_tenant_globex_operations.sql  PHASE_1_MIGRATION_SCRIPTS.sh  PHASE_2_PERFORMANCE_BENCHMARKS.sh  README.md  binary-size-check.sh  demo_hnsw_vector_search.sh  demo_rag_workflow.sh  docs-server.sh  install-agent-skills.sh  install-nano-pilot.sh  interactive_phase3_tutorial.sh  run_all_tests.sh  run_security_audit.sh  test_advanced_features.sh  test_audit.sh  test_compression.sh  test_core_sql.sh  test_data_types.sh  test_embedded.sh  test_encryption.sh  test_indexing_vector.sh  test_materialized_views.sh  test_new_features.sh  test_phase3_clean.sh  test_phase3_features.sh  test_repl.sh  test_rest_api.sh  test_server.sh  test_trigger_execution.sh  test_trigger_parsing.sh  test_vector_search.sh
sdks/go/: heliosdb.go
sql/: constraints.rs  evaluator.rs  explain.rs  explain_advanced.rs  explain_production.rs  explain_storage.rs  explain_webui.rs  functions.rs  llm_explainer.rs  logical_plan.rs  mod.rs  parser.rs  planner.rs  realtime_explain.rs  settings.rs  system_views.rs  triggers.rs  type_inference.rs  visual_explain.rs
src/: config.rs  embedded_db_dump.rs  error.rs  lib.rs  main.rs  types.rs
tests/: advanced_sql_test.rs  aggregate_hardening_tests.rs  alter_table_test.rs  arena_lifetime.rs  art_index_test.rs  audit_integration_tests.rs  audit_tests.rs  automatic_time_travel_tests.rs  bm25_correctness.rs  branch_as_of_tests.rs  branch_data_isolation_test.rs  branch_merge_conflict_tests.rs  branch_sql_integration_tests.rs  branch_storage_test.rs  code_graph_ast_index.rs  code_graph_body_vec.rs  code_graph_extractor_registry.rs  code_graph_grammar_registry.rs  code_graph_list_languages.rs  code_graph_local_embedder.rs  code_graph_mvp.rs  code_graph_namespacing.rs  code_graph_on_branch.rs  code_graph_parallel_index.rs  code_graph_parallel_index_bench.rs  code_graph_phase2.rs  code_graph_rename_apply.rs  code_graph_semantic_hash_ddl.rs  code_graph_sql.rs  code_graph_temporal.rs  compiled_query.rs  comprehensive_benchmarks.rs  concurrent_mv_refresh_tests.rs  crash_recovery_e2e_test.rs  create_database_and_dbname_validation.rs  critical_fixes.rs  cross_process_index_rebuild_tests.rs  crud_tests.rs  cte_hardening_tests.rs  dashboard_quirks_v3_26.rs  (+122 more)
tools/: HELIOSDB_SQLITE_CONVERTER.py  HELIOSDB_SQLITE_FEATURE_HANDLER.py  HELIOSDB_SQLITE_TYPE_MAPPER.py  HELIOSDB_SQLITE_WARNINGS.py  PHASE_2_TEST_AUTOMATION.py  README_SQLITE_CONVERTER.md  SQLITE_CONVERTER_PATENT_ANALYSIS.md  TEST_SQLITE_COMPATIBILITY_COMPREHENSIVE.py  test_sqlite_converter.py
(+534 files in other folders)
