[workspace]
members = ["."]

[package]
name = "heliosdb-nano"
version = "3.22.2"
edition = "2021"
rust-version = "1.85"
authors = ["Daniel Moya <daniel.moya@dimensigon.com>"]
license = "AGPL-3.0-only"
description = "PostgreSQL-compatible embedded database with TDE + ZKE encryption, HNSW vector search, Product Quantization, git-like branching, time-travel queries, materialized views, row-level security, and 50+ enterprise features"
repository = "https://github.com/Dimensigon/HDB-HeliosDB-Nano"
homepage = "https://github.com/Dimensigon/HDB-HeliosDB-Nano"
documentation = "https://docs.rs/heliosdb-nano"
keywords = ["database", "postgresql", "vector-database", "embedded", "encryption"]
categories = ["database-implementations", "embedded"]
readme = "README.md"
exclude = [
    "releases/",
    "/sql/",
    "docs/",
    "tests/protocol_tests/venv/",
    "tests/compatibility/",
    "tests/security/",
    "sdks/",
    "integrations/",
    "tools/",
    "scripts/",
    "heliosdb.pid",
    "heliosdb-data/",
    "data/",
    "certs/",
    ".idea/",
    ".vscode/",
]

[lib]
name = "heliosdb_nano"
path = "src/lib.rs"

[[bin]]
name = "heliosdb-nano"
path = "src/main.rs"

[dependencies]
# Storage (Direct RocksDB, no wrapper)
rocksdb = { version = "0.22", default-features = false, features = ["snappy", "zstd"] }

# SQL Parsing
sqlparser = { version = "0.53", features = ["visitor"] }

# Columnar Format
arrow = { version = "52", features = ["prettyprint"] }
parquet = { version = "52" }

# Async Runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json", "stream"] }
oauth2 = "4.4"
futures = "0.3"
async-stream = "0.3"

# HTTP Server (for sync protocol v2.3.0)
axum = { version = "0.7", features = ["ws"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "compression-gzip", "trace"] }

# PostgreSQL Protocol
# Note: Using pgwire when available, for now we'll implement basic protocol
bytes = "1.7"
md5 = "0.7"
base64 = "0.22"

# Vector Search
hnsw_rs = "0.3"

# Cryptography
blake3 = "1.5"  # Fast cryptographic hashing for content-addressed storage (non-FIPS)
aes-gcm = "0.10"
ring = { version = "0.17", optional = true }
sha2 = "0.10"
argon2 = "0.5"  # Non-FIPS KDF (Argon2id)
pbkdf2 = { version = "0.12", features = ["simple"] }  # FIPS-approved KDF
zeroize = "1.8"
hex = "0.4"
rustls = { version = "0.23", default-features = false }
tokio-rustls = "0.26"
rustls-pemfile = "2.0"
jsonwebtoken = "9"
# AWS-LC FIPS provider (FIPS 140-3 Certificate #4816)
aws-lc-rs = { version = "1.12", features = ["fips"], optional = true }

# Fast numeric formatting
itoa = "1"
ryu = "1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
bincode = "1.3"

# Compression (for dump/backup functionality)
zstd = "0.13"
lz4 = "1.26"
flate2 = "1.0"
brotli = "6.0"
crc32fast = "1.4"

# Parallelism for WAL optimization and concurrent processing
rayon = "1.8"

# Error Handling
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "=0.4.39", features = ["serde"] }
rand = "0.8"
parking_lot = "0.12"
crossbeam = "0.8"
tempfile = "3.12"
num-traits = "0.2"
rust_decimal = "1.33"  # Arbitrary precision decimal arithmetic for DECIMAL type
regex = "1.10"
once_cell = "1.19"
lru = "0.12"
dashmap = "5.5"
inventory = { version = "0.3", optional = true }

# Arena allocation (RAG-native -- reduces per-request alloc churn)
bumpalo = { version = "3", features = ["collections"] }
# Tokenization for BM25 / hybrid search (RAG-native)
unicode-segmentation = "1"

sysinfo = "0.30"  # CPU monitoring for MV scheduler

# Code-graph track (feature = "code-graph") — tree-sitter AST parsing
# for LSP-shaped queries over source code. All crates optional; the
# default build pulls none of them.
tree-sitter             = { version = "0.23", optional = true }
tree-sitter-rust        = { version = "0.23", optional = true }
tree-sitter-python      = { version = "0.23", optional = true }
tree-sitter-typescript  = { version = "0.23", optional = true }
tree-sitter-go          = { version = "0.23", optional = true }
tree-sitter-md          = { version = "0.3",  optional = true }
tree-sitter-sequel      = { version = "0.3",  optional = true }

# Local in-process text embedder (feature = "code-embed").  Adds a
# CPU ONNX runtime + pre-quantised models; ~150 MB at first run for
# the model cache, no on-disk impact on the binary itself.
fastembed = { version = "4", optional = true }

# Config
toml = "0.8"

# CLI
clap = { version = "4.5", features = ["derive"] }
rustyline = "14"
prettytable-rs = "0.10"
colored = "2"
terminal_size = "0.4"
indicatif = "0.17"

[dev-dependencies]
criterion = "0.5"
proptest = "1.5"
tokio-postgres = "0.7"
tokio-tungstenite = "0.21"

[lints.clippy]
# Deny unwrap in production code - forces proper error handling
unwrap_used = "deny"
# Warn on expect - should have descriptive context
expect_used = "warn"
# Deny indexing that could panic
indexing_slicing = "warn"
# Warn on panic in production code
panic = "warn"
# Warn on unimplemented/todo in production
unimplemented = "warn"
todo = "warn"

[features]
default = ["encryption", "vector-search", "ring-crypto", "ha-tier1"]
encryption = []
vector-search = []
simd = []
sync-experimental = []  # Sync/replication module - Core features implemented (conflict detection, vector clocks, field-level merge)
test-utils = []  # Test utilities for integration tests and benchmarks
server = []  # Server-mode features requiring async runtime
internal-tests = []  # Internal API tests (disabled for public builds)
compression = []      # MySQL wire-protocol packet compression (zlib via flate2)

# =============================================================================
# CODE-GRAPH TRACK (FR 2 / FR 3)
# =============================================================================
# Enables the `src/code_graph/` module: tree-sitter-backed AST index,
# LSP-shaped queries (`lsp_definition`, `lsp_references`, …), and the
# `_hdb_code_*` system tables.  Off by default.  Requires at least
# one grammar dep; Rust + Python ship in phase 1.
#
# Embedding generation is external-only (a pluggable HTTP endpoint).
# Nano ships no inference runtime of its own.
code-graph = [
    "dep:tree-sitter",
    "dep:tree-sitter-rust",
    "dep:tree-sitter-python",
    "dep:tree-sitter-typescript",
    "dep:tree-sitter-go",
    "dep:tree-sitter-md",
    "dep:tree-sitter-sequel",
    "reqwest/blocking",
]

# =============================================================================
# GRAPH-RAG TRACK (FR 4)
# =============================================================================
# Adds the `_hdb_graph_*` universal schema and the seed/expand/rerank
# Rust API. Requires `code-graph` because the code-symbol projection
# is the primary node population.
graph-rag = ["code-graph"]

# =============================================================================
# CODE-EMBED — local in-process embedder
# =============================================================================
# Pulls fastembed-rs (and its ORT dep) so the indexer can populate
# `_hdb_code_symbols.body_vec` without an external HTTP service.
# Implies `code-graph` (the body_vec column lives there).
code-embed = ["dep:fastembed", "code-graph"]

# =============================================================================
# MCP ENDPOINT (FR 5)
# =============================================================================
# Exposes the unified `src/mcp/` module: JSON-RPC 2.0 dispatcher,
# stdio server, 16-tool catalogue (10 DB-backed + 6 in-process RAG),
# and 4 resource URIs. Transport-agnostic — reusable from stdio,
# HTTP (Axum), WebSocket, and SSE mounts. Additive — embedded-only
# callers compile without this flag.
mcp-endpoint = ["dep:inventory"]

# =============================================================================
# CRYPTOGRAPHIC PROVIDER FEATURE FLAGS
# =============================================================================
# Choose ONE crypto provider (ring-crypto is default, fips for FIPS 140-3 compliance)

# Standard crypto provider (ring + BLAKE3) - DEFAULT
# Uses: ring for TLS/signatures, BLAKE3 for content hashing, Argon2id for KDF
ring-crypto = ["dep:ring"]

# FIPS 140-3 compliant crypto provider (AWS-LC FIPS + SHA-256)
# Uses: aws-lc-rs (FIPS Certificate #4816), SHA-256 for hashing, PBKDF2 for KDF
# Build with: cargo build --no-default-features --features fips,encryption,vector-search
fips = ["dep:aws-lc-rs"]

# =============================================================================
# HIGH AVAILABILITY FEATURE FLAGS
# =============================================================================
# Note: For connection routing / load balancing / failover proxy, use the
# standalone HeliosProxy binary: https://github.com/dimensigon/heliosdb-proxy
# See docs/guides/HIGH_AVAILABILITY_OVERVIEW.md for full documentation.

# HA Tier 1: Warm Standby (Active-Passive) — ENABLED BY DEFAULT
# - WAL streaming replication
# - Automatic failover detection
# - Read replica support
ha-tier1 = []

# HA Tier 2: Multi-Primary (Active-Active) — OPTIONAL
# - Branch-based replication (unique to HeliosDB)
# - Vector clock conflict resolution
# - Multi-region support
ha-tier2 = ["ha-tier1"]

# HA Tier 3: Sharding (Horizontal Scaling) — OPTIONAL
# - Consistent hash ring
# - Cross-shard query routing
# - Dynamic resharding
ha-tier3 = []

# HA-Dedup: Content-addressed deduplication across nodes — OPTIONAL
ha-dedup = []

# A/B Testing: Branch-based experiment routing — OPTIONAL
ha-ab-testing = []

# Branch-to-Server Replication: Selective branch sync to remote servers — OPTIONAL
ha-branch-replication = ["ha-tier2"]

# Convenience bundle: all optional HA features
ha-full = [
    "ha-tier1", "ha-tier2", "ha-tier3",
    "ha-dedup", "ha-ab-testing", "ha-branch-replication"
]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[[bench]]
name = "vector_search_bench"
harness = false

[[bench]]
name = "encryption_benchmark"
harness = false

[[bench]]
name = "simd_benchmark"
harness = false

[[bench]]
name = "time_travel_optimization"
harness = false

[[bench]]
name = "conflict_detection_bench"
harness = false
required-features = ["sync-experimental"]

[[bench]]
name = "sync_benchmark"
harness = false
required-features = ["sync-experimental"]

[[bench]]
name = "branch_performance"
harness = false

[[bench]]
name = "art_index_bench"
harness = false

[[bench]]
name = "multi_tenancy_bench"
harness = false

[[bench]]
name = "mv_incremental_bench"
harness = false
required-features = ["sync-experimental"]  # gated behind a feature whose lib code is also disabled; see #202 for un-gating

[[bench]]
name = "phase3_benchmarks"
harness = false

[[bench]]
name = "with_context_bench"
harness = false
required-features = ["graph-rag", "code-graph"]

[[bench]]
name = "linker_precision"
harness = false
required-features = ["graph-rag", "code-graph"]

[profile.bench]
inherits = "release"
